--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
 # Por ejemplo, mongo debe estar antes de order.
 # mongo: mismo nombre usado en el run.sh de Order y application.properties. # Se resuelve en una direccion IP.
   mongo:
-    image: tusuarioDocker/p2gps:db
+    image: abelvilla6/p2gps:db
     deploy:
       replicas: 1 # para escalabilidad del servicio.
     resources:
@@ -20,7 +20,7 @@ services:
       - "db-data:/data/db" # para dar persistencia a la sesion
 
   order:
-    image: tusuarioDocker/p2gps:order
+    image: abelvilla6/p2gps:order
     depends_on:
       - "mongo" # le pasamos al servicio order la IP del servicio mongo
     deploy:
@@ -35,7 +35,7 @@ services:
       - "8080:8080"
 
   web:
-    image: tusuarioDocker/p2gps:web
+    image: abelvilla6/p2gps:web
     deploy:
       replicas: 1
     resources:
